--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "clean:android": "cd android && ./gradlew clean",
+    "android:apk": "cd android && ./gradlew assemble",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "expo": "^50.0.13",
+    "expo-location": "~16.5.5",
+    "expo-sensors": "~12.9.1",
     "react": "18.2.0",
     "react-native": "0.73.6"
   },
