--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "expo": "^50.0.13",
     "expo-location": "~16.5.5",
     "expo-sensors": "~12.9.1",
